--- a/README
+++ b/README
@@ -1,1 +1,6 @@
 
+### TTTFS — The Tiny Toy File System
+Projet de Système C (L3)
+
+Le but du projet était de programmer un système de fichiers de la gestion des blocs à la programation des librairies associées afin de manipuler les volumes de manière haut niveau (création de dossier, de fichiers etc..).
+(Voir spécification https://www.irif.univ-paris-diderot.fr/~yunes/cours/sysc/projet1516.html )
